fix(user-creation): reject Cristin institution redirects #NP-51008 (#489)
* fix(user-creation): reject Cristin institution redirects to prevent unintended access #NP-51008

* feedback